correct gap in footer text

--- a/footer.css
+++ b/footer.css
@@ -59,7 +59,7 @@
     color: #444A4A;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 26px;
     margin-top: 15px;
 }
 
